<resources>
    <string name="app_name" translatable="false">REALES</string>

    <string name="google_client_id" translatable="false">776676760586-oeh418goat5ve4ng1r7dt0c2l9s5ihhv.apps.googleusercontent.com</string>

    <string name="drawer_opened" translatable="false">Drawer opened</string>
    <string name="drawer_closed" translatable="false">Drawer_closed</string>

    <string name="slogan">BEST PLACE FOR DECISION</string>
    <string name="login_google">Login with Google</string>
    <string name="skip_login">SKIP LOGIN</string>

    <string name="no_network_connection">No network connection</string>
    <string name="google_connection_error">Cannot connect to Google Service.</string>
    <string name="login_fail">Login failed!</string>
    <string name="slow_network_connection">Please check your network connection and try again.</string>
    <string name="message_cannot_connect_server">Failed to connect to server.</string>
    <string name="message_login_fail">Failed to login Google. Error: %1$s.</string>

    <string name="login">Login</string>

    <!-- Navigation Title -->
    <string name="navigation_profile">Profile</string>
    <string name="navigation_home">Home</string>
    <string name="navigation_new_post">Newest posts</string>
    <string name="navigation_saved_post">Saved posts</string>
    <string name="navigation_construct">Architecture</string>
    <string name="navigation_exterior">Exterior - Interior</string>
    <string name="navigation_geomancy">Geomancy</string>

    <!-- Home -->
    <string name="map_title">Map</string>
    <string name="search_hint">Enter location to search...</string>
    <string name="view_on_map">VIEW ON MAP</string>
    <string name="show_list">Show list</string>
    <string name="empty_data">Empty data.</string>

    <!-- Profile -->
    <string name="profile_detail">Detail</string>
    <string name="profile_activities">Activities</string>
    <string name="profile_id">ID:</string>
    <string name="profile_display_name">Display name:</string>
    <string name="profile_phone">Phone:</string>
    <string name="profile_email">Email:</string>
    <string name="profile_address">Address:</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="up_post">Up Post</string>
    <string name="add_picture_text_hint">Click button on the right to add picture</string>
    <string name="title">Title</string>
    <string name="investor">Investor</string>
    <string name="submit_sell_price">Price (Millions VND)</string>
    <string name="submit_lease_price">Price (Millions VND/month)</string>
    <string name="square">Square (m2)</string>
    <string name="address">Address</string>
    <string name="description">Description</string>
    <string name="image">Image</string>
    <string name="estate_location">Move to your estate location</string>
    <string name="gps_not_found_title">Location service is disabled</string>
    <string name="gps_not_found_message">Do you want to enable Location service?</string>
    <string name="no_network_message">Do you want to turn on your network?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="status_available">Available</string>
    <string name="status_sold">Sold</string>

    <string name="estate_all_type">All estate type</string>
    <string name="estate_apartment">Apartment</string>
    <string name="estate_house">House</string>
    <string name="estate_land">Land</string>
    <string name="estate_office">Office</string>

    <string name="estate_sell">Sell</string>
    <string name="estate_lease">Lease</string>

    <string name="contact_now">Contact now</string>
    <string name="contact_mess">Select the method to contact the owner</string>
    <string name="edit_profile_success">Edit success!</string>
    <string name="address_required">(*) Please enter your exactly address to find your location easier. Move below marker to your exactly location on map.</string>
    <string name="error_no_address">Enter your estate address</string>
    <string name="error_no_title">Enter a title</string>
    <string name="error_no_price">Enter expected price</string>
    <string name="error_no_square">Enter square of your estate</string>
    <string name="contact_name">Name</string>
    <string name="contact_phone">Phone number</string>
    <string name="contact_email">Email</string>
    <string name="error_no_name">Enter contact name</string>
    <string name="error_no_phone">Enter contact phone number</string>
    <string name="error_no_email">Enter contact email</string>
    <string name="contact_required">(*) Please enter the correct information for buyers can contact to you</string>
    <string name="no_address">Can not find your location. Please drag a marker on map to your location.</string>
    <string name="error_no_picture">Please add some picture of your estate</string>
    <string name="hide_list">Hide list</string>
    <string name="image_limited">You can add maximum 5 pictures.</string>
    <string name="error_can_not_submit">Can not submit, check your content.</string>
    <string name="wait_for_submitting">Submitting your post, please wait...</string>
    <string name="submit_success">Your post is submitted success!</string>
    <string name="loading">Loading...</string>
    <string name="setting">Setting</string>
    <string name="feature_not_support">\"Hi! This feature is not yet supported</string>
    <string name="empty_info">Not update yet.</string>
    <string name="not_login">You are not logged in</string>
    <string name="login_now">Please login to use this feature.</string>
    <string name="wait_for_verify">(Waiting for inspection)</string>
    <string name="stop">Stop</string>
    <string name="submitting">Your post is not completed.</string>
    <string name="stop_message">Do you want to stop?</string>
    <string name="about_us">About us</string>
    <string name="menu_help">Help</string>
    <string name="menu_login">Log In</string>
    <string name="menu_logout">Log Out</string>
    <string name="pressed_back_to_exit">Press back again to quit</string>
    <string name="login_to_saved">Log in to see your saved posts.</string>
    <string name="saved_empty">You have not saved any post.</string>
    <string name="filter">Filter</string>
    <string name="reset">Reset</string>

    <string name="filter_sell_price_0">All price</string>
    <string name="filter_sell_price_1"><![CDATA[<= 1 billions VND]]></string>
    <string name="filter_sell_price_2"><![CDATA[1 – 4 billions VND]]></string>
    <string name="filter_sell_price_3"><![CDATA[4 – 10 billions VND]]></string>
    <string name="filter_sell_price_4"><![CDATA[10 – 20 billions VND]]></string>
    <string name="filter_sell_price_5"><![CDATA[20 – 50 billions VND]]></string>
    <string name="filter_sell_price_6"><![CDATA[> 50 billions VND]]></string>

    <string name="filter_lease_price_0">All price</string>
    <string name="filter_lease_price_1"><![CDATA[<= 2 millions VND/month]]></string>
    <string name="filter_lease_price_2"><![CDATA[2 – 5 millions VND/month]]></string>
    <string name="filter_lease_price_3"><![CDATA[5 – 10 millions VND/month]]></string>
    <string name="filter_lease_price_4"><![CDATA[10 – 20 millions VND/month]]></string>
    <string name="filter_lease_price_5"><![CDATA[20 – 50 millions VND/month]]></string>
    <string name="filter_lease_price_6"><![CDATA[> 50 millions VND/month]]></string>
    <string name="sell_unit">VND</string>
    <string name="lease_unit">VND/month</string>
    <string name="delete_estate_message">Do you want to delete this post?</string>
    <string name="about_us_content">REALES is a product of the graduation project of 6 students of Information Technology Falcuty of Ho Chi Minh City University of Science</string>
    <string name="about_us_content_2">This is a product for who need to buy or rent real estate or at least want to research about real estate for future needs:\n
        - Sale/Lease real estate.\n
        - Search for real estate.\n
        - Buy/Rent real estate.\n
        - More information about real estate.
    </string>
    <string name="facebook_contact">Any questions or feedback, please contact Facebook</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="comment_rating"><![CDATA[Comment & Rating]]></string>
    <string name="write_comment">Write comment...</string>
    <string name="error_comment">Cannot submit more comment rating</string>
    <string name="web_page" translatable="false">https://www.myreales.tk</string>

</resources>
