<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/bg_white_fill">

    <ImageView
        android:id="@+id/btn_close_dialog"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:padding="16dp"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ic_app"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- App name -->
    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="#40000000"
        android:shadowDx="0"
        android:shadowDy="4"
        android:shadowRadius="4"
        android:text="@string/app_name"
        android:textColor="@color/green"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ic_app" />

    <TextView
        android:id="@+id/tv_about_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:paddingStart="14dp"
        android:paddingEnd="14dp"
        android:text="@string/about_us_content"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_app_name" />

    <TextView
        android:id="@+id/tv_about_us_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="14dp"
        android:paddingEnd="14dp"
        android:text="@string/about_us_content_2"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_about_us" />

    <TextView
        android:id="@+id/support_feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:drawableStart="@drawable/ic_facebook"
        android:drawablePadding="10dp"
        android:paddingStart="14dp"
        android:paddingEnd="14dp"
        android:text="@string/facebook_contact"
        android:textColor="#218BDE"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_about_us_2" />

</androidx.constraintlayout.widget.ConstraintLayout>