<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <FrameLayout
        android:id="@+id/profile_button"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btn_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_edit_profile"/>

        <ImageView
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit_profile"
            android:visibility="gone"/>
    </FrameLayout>


    <ScrollView
        android:id="@+id/detail_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_id"
                android:textColor="@color/silver" />

            <EditText
                android:id="@+id/profile_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@null"
                android:ellipsize="end"
                android:enabled="false"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:text="1234" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/profile_display_name"
                android:textColor="@color/silver" />

            <EditText
                android:id="@+id/profile_display_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@null"
                android:ellipsize="end"
                android:enabled="false"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:text="Hoàng Anh Quốc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/profile_phone"
                android:textColor="@color/silver" />

            <EditText
                android:id="@+id/profile_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@null"
                android:ellipsize="end"
                android:enabled="false"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:text="0348898600" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/profile_email"
                android:textColor="@color/silver" />

            <EditText
                android:id="@+id/profile_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@null"
                android:ellipsize="end"
                android:enabled="false"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:text="anhquoc.haq09@gmail.com" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/profile_address"
                android:textColor="@color/silver" />

            <EditText
                android:id="@+id/profile_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@null"
                android:ellipsize="end"
                android:enabled="false"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:text="221/3/14 Đất Thánh, P6, Q.Tân Bình, Tp.HCMMMMMMMMMMMMMMMMMMM" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>