<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@color/colorAccent">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="start|center_vertical"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_more_filter" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="55dp"
            android:gravity="center"
            android:text="@string/up_post"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/btn_up_post"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="15dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_like_heart" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Title -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColorHint="@color/gray"
                app:counterEnabled="true"
                app:counterMaxLength="100"
                app:counterOverflowTextAppearance="@style/counterOverride"
                app:counterTextAppearance="@style/counterText">

                <EditText
                    android:id="@+id/up_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_white_fill_green_stroke"
                    android:ems="10"
                    android:hint="@string/title"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Price -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColorHint="@color/gray">

                <EditText
                    android:id="@+id/up_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_white_fill_green_stroke"
                    android:ems="10"
                    android:hint="@string/price"
                    android:inputType="number"
                    android:maxLength="18"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Square -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"

                android:textColorHint="@color/gray">

                <EditText
                    android:id="@+id/up_square"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_white_fill_green_stroke"
                    android:ems="10"
                    android:hint="@string/square"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Address -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColorHint="@color/gray">

                <EditText
                    android:id="@+id/up_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_white_fill_green_stroke"
                    android:ems="10"
                    android:hint="@string/address"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Map -->
            <fragment
                android:id="@+id/up_map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">

                <TextView
                    android:id="@+id/empty_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="20dp"
                    android:text="@string/add_picture_text_hint"
                    android:textColor="#C4C4C4"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btn_add_image"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!-- Picture list -->
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/up_list_image"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btn_add_image"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!-- Button add picture-->
                <ImageView
                    android:id="@+id/btn_add_image"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_like_heart"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Description -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColorHint="@color/gray"
                app:counterEnabled="true"
                app:counterMaxLength="255"
                app:counterOverflowTextAppearance="@style/counterOverride"
                app:counterTextAppearance="@style/counterText">

                <EditText
                    android:id="@+id/up_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_white_fill_green_stroke"
                    android:ems="10"
                    android:hint="@string/description"
                    android:padding="8dp"
                    android:maxLines="10"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>